changes in make file

--- a/mpi/makefile
+++ b/mpi/makefile
@@ -6,16 +6,16 @@ LDFLAGS = -g
 LDLIBS = $(OMPLIBS)
 
 MPICC = mpicc
-MPICH = /usr/lib/openmpi
+MPICH = /opt/openmpi-1.4.3-gcc44
 CFLAGS = -I$(MPICH)/include
 
-all: tournament
+all: tournament dissemination
 
 tournament: tournament.o
 		$(MPICC) -o $@ $(LDFLAGS) $^ $(LDLIBS) -lm
-dissemination: disseminationBarrier.o
+dissemination: dissemination.o
 		$(MPICC) -o $@ $(LDFLAGS) $^ $(LDLIBS) -lm
 clean:
 	rm -f *.o tournament
-	rm -f *.o disseminationBarrier
+	rm -f *.o dissemination
 
